--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "classnames": "^2.5.1",
+    "eslint-plugin-unused-imports": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -49,6 +50,7 @@
     "@tanstack/eslint-plugin-query": "^5.51.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.8.0",
     "tailwindcss": "^3.4.4",
     "typescript-eslint": "^7.16.0"
