--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
     "@tanstack/react-query": "^5.51.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "classnames": "^2.5.1",
-    "eslint-plugin-unused-imports": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -46,13 +44,14 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@tanstack/eslint-plugin-query": "^5.51.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "globals": "^15.8.0",
-    "tailwindcss": "^3.4.4",
-    "typescript-eslint": "^7.16.0"
+    "tailwindcss": "^3.4.4"
   }
 }
